--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -1,15 +1,16 @@
 description = "Sparkling Water Benchmarks"
 
 apply from: "$rootDir/gradle/utils.gradle"
+apply plugin: 'java-library'
 
 dependencies {
     // Sparkling Water libraries
-    compile project(":sparkling-water-ml")
-    compile project(":sparkling-water-core")
+    api project(":sparkling-water-ml")
+    api project(":sparkling-water-core")
 
     // Spark libraries
-    compile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    compile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
+    api "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
+    api "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
 }
 
 task cleanTerraform(type: Delete) {
