--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,57 +26,57 @@ jar {
 }
 
 dependencies {
-    compile project(':sparkling-water-utils')
-    compile project(':sparkling-water-extensions')
-    
-    compile("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
+    api project(':sparkling-water-utils')
+    api project(':sparkling-water-extensions')
+
+    api("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
 
     // Generic model support
-    compile("ai.h2o:h2o-genmodel:${h2oVersion}")
+    api("ai.h2o:h2o-genmodel:${h2oVersion}")
     // H2O security
-    compile("ai.h2o:h2o-security:${h2oVersion}")
+    api("ai.h2o:h2o-security:${h2oVersion}")
     // H2O core
-    compile("ai.h2o:h2o-core:${h2oVersion}") {
+    api("ai.h2o:h2o-core:${h2oVersion}") {
         //
         // Exclude all dependencies provided by Spark environment already
         // The motivation is to catch error at compile time
         exclude(group: "net.java.dev.jets3t", module: "jets3t")
         exclude(group: "commons-collections", module: "commons-collections")
     }
-    compile "ai.h2o:h2o-security:${h2oVersion}"
+    api "ai.h2o:h2o-security:${h2oVersion}"
 
     // H2O Native Hive Support
-    compile "ai.h2o:h2o-hive:${h2oVersion}"
+    api "ai.h2o:h2o-hive:${h2oVersion}"
     // H2O algorithms
-    compile "ai.h2o:h2o-algos:${h2oVersion}"
+    api "ai.h2o:h2o-algos:${h2oVersion}"
     // H2O web
-    compile "ai.h2o:h2o-web:${h2oVersion}"
+    api "ai.h2o:h2o-web:${h2oVersion}"
     // H2O Avro parser support
-    compile("ai.h2o:h2o-avro-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-avro-parser:${h2oVersion}") {
         exclude group: 'org.apache.avro', module: 'avro'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
 
     // H2O XGBoost
-    compile "ai.h2o:h2o-ext-xgboost:${h2oVersion}"
-    compile "ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}"
+    api "ai.h2o:h2o-ext-xgboost:${h2oVersion}"
+    api "ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}"
 
     // H2O Parquet parser support
-    compile("ai.h2o:h2o-parquet-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-parquet-parser:${h2oVersion}") {
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
         exclude group: 'org.apache.parquet', module: 'parquet-hadoop'
     }
     // H2O Orc  parser support
-    compile("ai.h2o:h2o-orc-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-orc-parser:${h2oVersion}") {
         exclude group: 'org.apache.hive', module: 'hive-exec'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
     // H2O HDFS Persistent layer
-    compile("ai.h2o:h2o-persist-hdfs:${h2oVersion}") {
+    api("ai.h2o:h2o-persist-hdfs:${h2oVersion}") {
         // Cannot use here: transitive = false since Gradle is producing wrong POM file
         // Hence the exlusions are listed manually
         exclude(group: "org.apache.hadoop", module: "hadoop-client")
@@ -84,30 +84,30 @@ dependencies {
         exclude(group: "org.apache.hadoop", module: "hadoop-aws")
     }
     // H2O S3 persistance support
-    compile("ai.h2o:h2o-persist-s3:${h2oVersion}") {
+    api("ai.h2o:h2o-persist-s3:${h2oVersion}") {
         exclude(group: "com.fasterxml.jackson.core")
     }
 
-    compile("ai.h2o:h2o-persist-gcs:${h2oVersion}")
+    api("ai.h2o:h2o-persist-gcs:${h2oVersion}")
 
 
     // H2O Jetty support
-    compile("ai.h2o:h2o-jetty-9:${h2oVersion}")
-    compile("ai.h2o:h2o-webserver-iface:${h2oVersion}")
+    api("ai.h2o:h2o-jetty-9:${h2oVersion}")
+    api("ai.h2o:h2o-webserver-iface:${h2oVersion}")
 
     // H2O AutoML
-    compile "ai.h2o:h2o-automl:${h2oVersion}"
+    api "ai.h2o:h2o-automl:${h2oVersion}"
 
     // Sparkling Water REPL
-    compile project(':sparkling-water-repl')
+    api project(':sparkling-water-repl')
     compileOnly project(':sparkling-water-macros')
 
     // Add joda optional convert library which is required in Scala environment
-    compile "org.joda:joda-convert:1.7"
+    api "org.joda:joda-convert:1.7"
 
     // And Scala library
-    compile "org.scala-lang:scala-library:${scalaVersion}"
-    compile "org.scala-lang:scala-compiler:${scalaVersion}"
+    api "org.scala-lang:scala-library:${scalaVersion}"
+    api "org.scala-lang:scala-compiler:${scalaVersion}"
 
 
     // TEST DEPENDENCIES
@@ -115,35 +115,35 @@ dependencies {
     // Spark components
     // - core
     compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
+    testImplementation "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
 
     // - SQL component
     compileOnly "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
+    testImplementation "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
 
     // - MLLib component
     compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
+    testImplementation "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
 
-    testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+    testImplementation "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
 
-    testCompile project(':sparkling-water-macros')
+    testImplementation project(':sparkling-water-macros')
 
     // And use scalatest for Scala testing
-    testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    testCompile "junit:junit:4.11"
+    testImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
+    testImplementation "junit:junit:4.11"
 
     // Integration tests requirements
-    integTestCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    integTestCompile "junit:junit:4.11"
+    integTestImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
+    integTestImplementation "junit:junit:4.11"
 
     // Requirements of benchmarks
-    benchCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    benchCompile "junit:junit:4.11"
+    benchImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
+    benchImplementation "junit:junit:4.11"
 
     // Put Spark Assembly on runtime path
-    integTestRuntime fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
-    benchRuntime fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
+    integTestRuntimeOnly fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
+    benchRuntimeOnly fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
 }
 
 task createSparkVersionFile {
