--- a/repl/build.gradle
+++ b/repl/build.gradle
@@ -12,12 +12,12 @@ sourceSets {
 
 dependencies {
     // Spark REPL
-    compile project(":sparkling-water-utils")
+    api project(":sparkling-water-utils")
     compileOnly "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+    testImplementation "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
 
-    testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    testCompile "junit:junit:4.11"
+    testImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
+    testImplementation "junit:junit:4.11"
 }
 
 defineStandardPublication().call()
