--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,16 +26,12 @@ jar {
 }
 
 dependencies {
-    api project(':sparkling-water-utils')
-    api project(':sparkling-water-extensions')
-
+    api(project(':sparkling-water-utils'))
+    api(project(':sparkling-water-extensions'))
+    api(project(':sparkling-water-repl'))
     api("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
-
-    // Generic model support
     api("ai.h2o:h2o-genmodel:${h2oVersion}")
-    // H2O security
     api("ai.h2o:h2o-security:${h2oVersion}")
-    // H2O core
     api("ai.h2o:h2o-core:${h2oVersion}") {
         //
         // Exclude all dependencies provided by Spark environment already
@@ -43,39 +39,28 @@ dependencies {
         exclude(group: "net.java.dev.jets3t", module: "jets3t")
         exclude(group: "commons-collections", module: "commons-collections")
     }
-    api "ai.h2o:h2o-security:${h2oVersion}"
-
-    // H2O Native Hive Support
-    api "ai.h2o:h2o-hive:${h2oVersion}"
-    // H2O algorithms
-    api "ai.h2o:h2o-algos:${h2oVersion}"
-    // H2O web
-    api "ai.h2o:h2o-web:${h2oVersion}"
-    // H2O Avro parser support
+    api("ai.h2o:h2o-security:${h2oVersion}")
+    api("ai.h2o:h2o-hive:${h2oVersion}")
+    api("ai.h2o:h2o-algos:${h2oVersion}")
+    api("ai.h2o:h2o-web:${h2oVersion}")
     api("ai.h2o:h2o-avro-parser:${h2oVersion}") {
         exclude group: 'org.apache.avro', module: 'avro'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
-
-    // H2O XGBoost
-    api "ai.h2o:h2o-ext-xgboost:${h2oVersion}"
-    api "ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}"
-
-    // H2O Parquet parser support
+    api("ai.h2o:h2o-ext-xgboost:${h2oVersion}")
+    api("ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}")
     api("ai.h2o:h2o-parquet-parser:${h2oVersion}") {
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
         exclude group: 'org.apache.parquet', module: 'parquet-hadoop'
     }
-    // H2O Orc  parser support
     api("ai.h2o:h2o-orc-parser:${h2oVersion}") {
         exclude group: 'org.apache.hive', module: 'hive-exec'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
-    // H2O HDFS Persistent layer
     api("ai.h2o:h2o-persist-hdfs:${h2oVersion}") {
         // Cannot use here: transitive = false since Gradle is producing wrong POM file
         // Hence the exlusions are listed manually
@@ -83,67 +68,38 @@ dependencies {
         exclude(group: "org.apache.hadoop", module: "hadoop-hdfs-client")
         exclude(group: "org.apache.hadoop", module: "hadoop-aws")
     }
-    // H2O S3 persistance support
     api("ai.h2o:h2o-persist-s3:${h2oVersion}") {
         exclude(group: "com.fasterxml.jackson.core")
     }
-
     api("ai.h2o:h2o-persist-gcs:${h2oVersion}")
-
-
-    // H2O Jetty support
     api("ai.h2o:h2o-jetty-9:${h2oVersion}")
     api("ai.h2o:h2o-webserver-iface:${h2oVersion}")
+    api("ai.h2o:h2o-automl:${h2oVersion}")
 
-    // H2O AutoML
-    api "ai.h2o:h2o-automl:${h2oVersion}"
+    compileOnly(project(':sparkling-water-macros'))
+    compileOnly("org.scala-lang:scala-library:${scalaVersion}")
+    compileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
+    compileOnly("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
-    // Sparkling Water REPL
-    api project(':sparkling-water-repl')
-    compileOnly project(':sparkling-water-macros')
+    testImplementation("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation(project(':sparkling-water-macros'))
+    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    testImplementation("junit:junit:4.11")
 
-    // Add joda optional convert library which is required in Scala environment
-    api "org.joda:joda-convert:1.7"
+    integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    integTestImplementation("junit:junit:4.11")
 
-    // And Scala library
-    api "org.scala-lang:scala-library:${scalaVersion}"
-    api "org.scala-lang:scala-compiler:${scalaVersion}"
-
-
-    // TEST DEPENDENCIES
-
-    // Spark components
-    // - core
-    compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-    testImplementation "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-
-    // - SQL component
-    compileOnly "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    testImplementation "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-
-    // - MLLib component
-    compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-    testImplementation "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-
-    testImplementation "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
-
-    testImplementation project(':sparkling-water-macros')
-
-    // And use scalatest for Scala testing
-    testImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    testImplementation "junit:junit:4.11"
-
-    // Integration tests requirements
-    integTestImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    integTestImplementation "junit:junit:4.11"
-
-    // Requirements of benchmarks
-    benchImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    benchImplementation "junit:junit:4.11"
+    benchImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    benchImplementation("junit:junit:4.11")
 
     // Put Spark Assembly on runtime path
-    integTestRuntimeOnly fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
-    benchRuntimeOnly fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
+    integTestRuntimeOnly(fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar'))
+    benchRuntimeOnly(fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar'))
 }
 
 task createSparkVersionFile {
