--- a/repl/build.gradle
+++ b/repl/build.gradle
@@ -11,13 +11,13 @@ sourceSets {
 }
 
 dependencies {
-    // Spark REPL
-    api project(":sparkling-water-utils")
-    compileOnly "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
-    testImplementation "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+    api(project(":sparkling-water-utils"))
 
-    testImplementation "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    testImplementation "junit:junit:4.11"
+    compileOnly("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
+
+    testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    testImplementation("junit:junit:4.11")
 }
 
 defineStandardPublication().call()
