--- a/apps/streaming/build.gradle
+++ b/apps/streaming/build.gradle
@@ -12,10 +12,10 @@ dependencies {
     exclude group: "javax.servlet", module: "servlet-api"
   }
 
-  compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-  compileOnly "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-  compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-  compileOnly "org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}"
-  compileOnly "org.scala-lang:scala-library:${scalaVersion}"
+  compileOnly("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+  compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+  compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
+  compileOnly("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
+  compileOnly("org.scala-lang:scala-library:${scalaVersion}")
 }
 
