--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -12,6 +12,9 @@ dependencies {
 
     api(project(":sparkling-water-ml"))
     api(project(":sparkling-water-core"))
+
+    compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 }
 
 task cleanTerraform(type: Delete) {
