--- a/jenkins/build.gradle
+++ b/jenkins/build.gradle
@@ -46,7 +46,7 @@ task createDockerfile(type: Dockerfile) {
         def second = version.split("\\.")[1]
         environmentVariable("SPARK_HOME_${first}_${second}", "/home/jenkins/spark-${version}-bin-hadoop2.7")
     }
-    runCommand """\\
+/*    runCommand """\\
                 cd /home/jenkins && \\
                 git clone https://github.com/h2oai/sparkling-water.git && \\
                 cd sparkling-water && \\
@@ -61,7 +61,7 @@ task createDockerfile(type: Dockerfile) {
                     ./gradlew -Pspark=${majorVersion} :sparkling-water-py:pipInstall -PpythonPath=/envs/h2o_env_python3.6/bin
                     """
     }
-    runCommand "cp -R /home/jenkins/sparkling-water/.gradle/python /home/jenkins/.gradle/python"
+    runCommand "cp -R /home/jenkins/sparkling-water/.gradle/python /home/jenkins/.gradle/python"*/
     user("root")
 
     runCommand """\\
@@ -79,13 +79,12 @@ task createDockerfile(type: Dockerfile) {
                 """
     environmentVariable("PATH", "\"/home/jenkins/miniconda/bin:\${PATH}\"")
     runCommand """\\
-                sudo env "PATH=\$PATH" conda install anaconda anaconda-client conda-build -y && \\
-                sudo env "PATH=\$PATH" conda update conda -y && \\
-                sudo env "PATH=\$PATH" conda update anaconda anaconda-client conda-build -y && \\
+                conda install anaconda anaconda-client conda-build -y && \\
+                conda update conda -y && \\
+                conda update anaconda anaconda-client conda-build -y && \\
                 conda config --add channels conda-forge
                 """
 
-    runCommand "sudo chown -R jenkins:jenkins /home/jenkins/miniconda/pkgs"
     environmentVariable("HIVE_HOME", "/usr/hdp/2.2.9.0-3393/hive")
     runCommand "pip install awscli --upgrade --user"
 }
